--- a/Hackathon Joint Calendar/Hackathon Joint Calendar.vcxproj
+++ b/Hackathon Joint Calendar/Hackathon Joint Calendar.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="Calendar.cpp" />
     <ClCompile Include="Event.cpp" />
+    <ClCompile Include="imput.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="TimePoint.cpp" />
     <ClCompile Include="TimeTable.cpp" />
@@ -150,6 +151,7 @@
     <ClInclude Include="Calendar.h" />
     <ClInclude Include="Event.h" />
     <ClInclude Include="Common.h" />
+    <ClInclude Include="imput.h" />
     <ClInclude Include="TimePoint.h" />
     <ClInclude Include="TimeTable.h" />
     <ClInclude Include="User.h" />
