--- a/Hackathon Joint Calendar/Hackathon Joint Calendar.vcxproj.filters
+++ b/Hackathon Joint Calendar/Hackathon Joint Calendar.vcxproj.filters
@@ -33,7 +33,7 @@
     <ClCompile Include="Calendar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="imput.cpp">
+    <ClCompile Include="Input.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -56,7 +56,7 @@
     <ClInclude Include="Calendar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="imput.h">
+    <ClInclude Include="Input.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
